feat: criação dos arquivos de estilos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/estilos.css">
+
 
     <title>Mundo Super Mario</title>
 </head>
@@ -72,7 +75,8 @@
                     <div class="poderes">
                         <h3>Poderes</h3>
                         <ul>
-                            <li><strong>Salto Sônico:</strong> Salta ainda mais alto que Mario, ideal para plataformas.</li>
+                            <li><strong>Salto Sônico:</strong> Salta ainda mais alto que Mario, ideal para plataformas.
+                            </li>
                             <li><strong>Fantasma Buster:</strong> Usa o Poltergust para capturar fantasmas.</li>
                         </ul>
                     </div>
@@ -102,7 +106,8 @@
                     <div class="poderes">
                         <h3>Poderes</h3>
                         <ul>
-                            <li><strong>Flutuação Graciosa:</strong> Flutua por um curto período ao pular, alcançando plataformas mais altas.</li>
+                            <li><strong>Flutuação Graciosa:</strong> Flutua por um curto período ao pular, alcançando
+                                plataformas mais altas.</li>
                             <li><strong>Magia da Semente:</strong> Utiliza magia para curar aliados ou proteger-se.</li>
                         </ul>
                     </div>
@@ -162,7 +167,8 @@
                     <div class="poderes">
                         <h3>Poderes</h3>
                         <ul>
-                            <li><strong>Lançamento de Ovos:</strong> Joga ovos que atingem inimigos e quebram obstáculos.</li>
+                            <li><strong>Lançamento de Ovos:</strong> Joga ovos que atingem inimigos e quebram
+                                obstáculos.</li>
                             <li><strong>Engolidor Verde:</strong> Come inimigos e transforma-os em ovos.</li>
                         </ul>
                     </div>
@@ -193,7 +199,8 @@
                         <h3>Poderes</h3>
                         <ul>
                             <li><strong>Soco Sônico:</strong> Golpe poderoso que derruba inimigos próximos.</li>
-                            <li><strong>Salto do Macaco:</strong> Realiza saltos altos e longos, perfeito para plataformas.</li>
+                            <li><strong>Salto do Macaco:</strong> Realiza saltos altos e longos, perfeito para
+                                plataformas.</li>
                         </ul>
                     </div>
                 </div>
@@ -222,7 +229,8 @@
                     <div class="poderes">
                         <h3>Poderes</h3>
                         <ul>
-                            <li><strong>Garrafa de Ganância:</strong> Atrai tesouros e itens próximos com sua habilidade.</li>
+                            <li><strong>Garrafa de Ganância:</strong> Atrai tesouros e itens próximos com sua
+                                habilidade.</li>
                             <li><strong>Soco do Wario:</strong> Golpes poderosos que derrubam inimigos.</li>
                         </ul>
                     </div>
@@ -252,8 +260,9 @@
                     <div class="poderes">
                         <h3>Poderes</h3>
                         <ul>
-                            <li><strong>Fogo do Dragão:</strong> Cospe fogo intenso para queimar inimigos e obstáculos.</li>
-                            <li><strong>Realeza Koopa:</strong>  Invoca Koopas para lutar ao seu lado.</li>
+                            <li><strong>Fogo do Dragão:</strong> Cospe fogo intenso para queimar inimigos e obstáculos.
+                            </li>
+                            <li><strong>Realeza Koopa:</strong> Invoca Koopas para lutar ao seu lado.</li>
                         </ul>
                     </div>
                 </div>
