--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <div class="mundo-super">
             <div class="baralho">
-                <div class="ficha-personagem">
+                <div class="ficha-personagem mario aberto">
                     <div class="ficha-topo">
                         <div class="ficha-titulo">
                             <h2 class="nome">Mario</h2>
@@ -32,28 +32,30 @@
                             <img src="./src/imagens/mario-1.png" alt="Imagem do Mario">
                         </div>
 
-                        <div class="perfil">
-                            <h3>Perfil</h3>
-                            <ul>
-                                <li>Corajoso</li>
-                                <li>Determinado</li>
-                                <li>Protetor</li>
-                                <li>Divertido</li>
-                            </ul>
-                        </div>
+                        <div class="ficha-infos">
+                            <div class="perfil">
+                                <h3>Perfil</h3>
+                                <ul>
+                                    <li>Corajoso</li>
+                                    <li>Determinado</li>
+                                    <li>Protetor</li>
+                                    <li>Divertido</li>
+                                </ul>
+                            </div>
 
-                        <div class="poderes">
-                            <h3>Poderes</h3>
-                            <ul>
-                                <li><strong>Super Salto:</strong> Habilidade de saltar mais alto para alcançar áreas
-                                    difíceis.</li>
-                                <li><strong>Poder do Fogo:</strong> Lança bolas de fogo para atacar inimigos.</li>
-                            </ul>
+                            <div class="poderes">
+                                <h3>Poderes</h3>
+                                <ul>
+                                    <li><strong>Super Salto:</strong> Habilidade de saltar mais alto para alcançar áreas
+                                        difíceis.</li>
+                                    <li><strong>Poder do Fogo:</strong> Lança bolas de fogo para atacar inimigos.</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="ficha-personagem">
+                <div class="ficha-personagem luigi">
                     <div class="ficha-topo">
                         <div class="ficha-titulo">
                             <h2 class="nome">Luigi</h2>
@@ -63,29 +65,31 @@
                             <img src="./src/imagens/luigi-1.png" alt="Imagem do Luigi">
                         </div>
 
-                        <div class="perfil">
-                            <h3>Perfil</h3>
-                            <ul>
-                                <li>Tímido</li>
-                                <li>Leal</li>
-                                <li>Aventureiro</li>
-                                <li>Engraçado</li>
-                            </ul>
-                        </div>
+                        <div class="ficha-infos">
+                            <div class="perfil">
+                                <h3>Perfil</h3>
+                                <ul>
+                                    <li>Tímido</li>
+                                    <li>Leal</li>
+                                    <li>Aventureiro</li>
+                                    <li>Engraçado</li>
+                                </ul>
+                            </div>
 
-                        <div class="poderes">
-                            <h3>Poderes</h3>
-                            <ul>
-                                <li><strong>Salto Sônico:</strong> Salta ainda mais alto que Mario, ideal para
-                                    plataformas.
-                                </li>
-                                <li><strong>Fantasma Buster:</strong> Usa o Poltergust para capturar fantasmas.</li>
-                            </ul>
+                            <div class="poderes">
+                                <h3>Poderes</h3>
+                                <ul>
+                                    <li><strong>Salto Sônico:</strong> Salta ainda mais alto que Mario, ideal para
+                                        plataformas.
+                                    </li>
+                                    <li><strong>Fantasma Buster:</strong> Usa o Poltergust para capturar fantasmas.</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="ficha-personagem">
+                <div class="ficha-personagem peach">
                     <div class="ficha-topo">
                         <div class="ficha-titulo">
                             <h2 class="nome">Peach</h2>
@@ -95,30 +99,33 @@
                             <img src="./src/imagens/peach-1.png" alt="Imagem do Peach">
                         </div>
 
-                        <div class="perfil">
-                            <h3>Perfil</h3>
-                            <ul>
-                                <li>Corajosa</li>
-                                <li>Diplomática</li>
-                                <li>Inteligente</li>
-                                <li>Elegante</li>
-                            </ul>
-                        </div>
+                        <div class="ficha-infos">
+                            <div class="perfil">
+                                <h3>Perfil</h3>
+                                <ul>
+                                    <li>Corajosa</li>
+                                    <li>Diplomática</li>
+                                    <li>Inteligente</li>
+                                    <li>Elegante</li>
+                                </ul>
+                            </div>
 
-                        <div class="poderes">
-                            <h3>Poderes</h3>
-                            <ul>
-                                <li><strong>Flutuação Graciosa:</strong> Flutua por um curto período ao pular,
-                                    alcançando
-                                    plataformas mais altas.</li>
-                                <li><strong>Magia da Semente:</strong> Utiliza magia para curar aliados ou proteger-se.
-                                </li>
-                            </ul>
+                            <div class="poderes">
+                                <h3>Poderes</h3>
+                                <ul>
+                                    <li><strong>Flutuação Graciosa:</strong> Flutua por um curto período ao pular,
+                                        alcançando
+                                        plataformas mais altas.</li>
+                                    <li><strong>Magia da Semente:</strong> Utiliza magia para curar aliados ou
+                                        proteger-se.
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="ficha-personagem">
+                <div class="ficha-personagem toad">
                     <div class="ficha-topo">
                         <div class="ficha-titulo">
                             <h2 class="nome">Toad</h2>
@@ -128,28 +135,31 @@
                             <img src="./src/imagens/toad-1.png" alt="Imagem do Toad">
                         </div>
 
-                        <div class="perfil">
-                            <h3>Perfil</h3>
-                            <ul>
-                                <li>Prestativo</li>
-                                <li>Leal</li>
-                                <li>Ágil</li>
-                                <li>Entusiástico</li>
-                            </ul>
-                        </div>
+                        <div class="ficha-infos">
+                            <div class="perfil">
+                                <h3>Perfil</h3>
+                                <ul>
+                                    <li>Prestativo</li>
+                                    <li>Leal</li>
+                                    <li>Ágil</li>
+                                    <li>Entusiástico</li>
+                                </ul>
+                            </div>
 
-                        <div class="poderes">
-                            <h3>Poderes</h3>
-                            <ul>
-                                <li><strong>Corrida Rápida:</strong> Acelera rapidamente, útil para escapar de perigos.
-                                </li>
-                                <li><strong>Sabotagem Silenciosa:</strong> Ataca inimigos de forma sorrateira.</li>
-                            </ul>
+                            <div class="poderes">
+                                <h3>Poderes</h3>
+                                <ul>
+                                    <li><strong>Corrida Rápida:</strong> Acelera rapidamente, útil para escapar de
+                                        perigos.
+                                    </li>
+                                    <li><strong>Sabotagem Silenciosa:</strong> Ataca inimigos de forma sorrateira.</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="ficha-personagem">
+                <div class="ficha-personagem yoshi">
                     <div class="ficha-topo">
                         <div class="ficha-titulo">
                             <h2 class="nome">Yoshi</h2>
@@ -159,28 +169,30 @@
                             <img src="./src/imagens/yoshi-1.png" alt="Imagem do Yoshi">
                         </div>
 
-                        <div class="perfil">
-                            <h3>Perfil</h3>
-                            <ul>
-                                <li>Aventureiro</li>
-                                <li>Protetor</li>
-                                <li>Leal</li>
-                                <li>Amigável</li>
-                            </ul>
-                        </div>
+                        <div class="ficha-infos">
+                            <div class="perfil">
+                                <h3>Perfil</h3>
+                                <ul>
+                                    <li>Aventureiro</li>
+                                    <li>Protetor</li>
+                                    <li>Leal</li>
+                                    <li>Amigável</li>
+                                </ul>
+                            </div>
 
-                        <div class="poderes">
-                            <h3>Poderes</h3>
-                            <ul>
-                                <li><strong>Lançamento de Ovos:</strong> Joga ovos que atingem inimigos e quebram
-                                    obstáculos.</li>
-                                <li><strong>Engolidor Verde:</strong> Come inimigos e transforma-os em ovos.</li>
-                            </ul>
+                            <div class="poderes">
+                                <h3>Poderes</h3>
+                                <ul>
+                                    <li><strong>Lançamento de Ovos:</strong> Joga ovos que atingem inimigos e quebram
+                                        obstáculos.</li>
+                                    <li><strong>Engolidor Verde:</strong> Come inimigos e transforma-os em ovos.</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="ficha-personagem">
+                <div class="ficha-personagem donkey-kong">
                     <div class="ficha-topo">
                         <div class="ficha-titulo">
                             <h2 class="nome">Donkey Kong</h2>
@@ -190,28 +202,30 @@
                             <img src="./src/imagens/donkey-kong-1.png" alt="Imagem do Donkey Kong">
                         </div>
 
-                        <div class="perfil">
-                            <h3>Perfil</h3>
-                            <ul>
-                                <li>Forte</li>
-                                <li>Teimoso</li>
-                                <li>Desafiante</li>
-                                <li>Brincalhão</li>
-                            </ul>
-                        </div>
+                        <div class="ficha-infos">
+                            <div class="perfil">
+                                <h3>Perfil</h3>
+                                <ul>
+                                    <li>Forte</li>
+                                    <li>Teimoso</li>
+                                    <li>Desafiante</li>
+                                    <li>Brincalhão</li>
+                                </ul>
+                            </div>
 
-                        <div class="poderes">
-                            <h3>Poderes</h3>
-                            <ul>
-                                <li><strong>Soco Sônico:</strong> Golpe poderoso que derruba inimigos próximos.</li>
-                                <li><strong>Salto do Macaco:</strong> Realiza saltos altos e longos, perfeito para
-                                    plataformas.</li>
-                            </ul>
+                            <div class="poderes">
+                                <h3>Poderes</h3>
+                                <ul>
+                                    <li><strong>Soco Sônico:</strong> Golpe poderoso que derruba inimigos próximos.</li>
+                                    <li><strong>Salto do Macaco:</strong> Realiza saltos altos e longos, perfeito para
+                                        plataformas.</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="ficha-personagem">
+                <div class="ficha-personagem wario">
                     <div class="ficha-topo">
                         <div class="ficha-titulo">
                             <h2 class="nome">Wario</h2>
@@ -221,28 +235,30 @@
                             <img src="./src/imagens/wario-1.png" alt="Imagem do Wario">
                         </div>
 
-                        <div class="perfil">
-                            <h3>Perfil</h3>
-                            <ul>
-                                <li>Egoísta</li>
-                                <li>Astuto</li>
-                                <li>Ganancioso</li>
-                                <li>Cômico</li>
-                            </ul>
-                        </div>
+                        <div class="ficha-infos">
+                            <div class="perfil">
+                                <h3>Perfil</h3>
+                                <ul>
+                                    <li>Egoísta</li>
+                                    <li>Astuto</li>
+                                    <li>Ganancioso</li>
+                                    <li>Cômico</li>
+                                </ul>
+                            </div>
 
-                        <div class="poderes">
-                            <h3>Poderes</h3>
-                            <ul>
-                                <li><strong>Garrafa de Ganância:</strong> Atrai tesouros e itens próximos com sua
-                                    habilidade.</li>
-                                <li><strong>Soco do Wario:</strong> Golpes poderosos que derrubam inimigos.</li>
-                            </ul>
+                            <div class="poderes">
+                                <h3>Poderes</h3>
+                                <ul>
+                                    <li><strong>Garrafa de Ganância:</strong> Atrai tesouros e itens próximos com sua
+                                        habilidade.</li>
+                                    <li><strong>Soco do Wario:</strong> Golpes poderosos que derrubam inimigos.</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="ficha-personagem">
+                <div class="ficha-personagem bowser">
                     <div class="ficha-topo">
                         <div class="ficha-titulo">
                             <h2 class="nome">Bowser</h2>
@@ -252,24 +268,26 @@
                             <img src="./src/imagens/bowser-1.png" alt="Imagem do Bowser">
                         </div>
 
-                        <div class="perfil">
-                            <h3>Perfil</h3>
-                            <ul>
-                                <li>Maligno</li>
-                                <li>Poderoso</li>
-                                <li>Manipulador</li>
-                                <li>Ambicioso</li>
-                            </ul>
-                        </div>
+                        <div class="ficha-infos">
+                            <div class="perfil">
+                                <h3>Perfil</h3>
+                                <ul>
+                                    <li>Maligno</li>
+                                    <li>Poderoso</li>
+                                    <li>Manipulador</li>
+                                    <li>Ambicioso</li>
+                                </ul>
+                            </div>
 
-                        <div class="poderes">
-                            <h3>Poderes</h3>
-                            <ul>
-                                <li><strong>Fogo do Dragão:</strong> Cospe fogo intenso para queimar inimigos e
-                                    obstáculos.
-                                </li>
-                                <li><strong>Realeza Koopa:</strong> Invoca Koopas para lutar ao seu lado.</li>
-                            </ul>
+                            <div class="poderes">
+                                <h3>Poderes</h3>
+                                <ul>
+                                    <li><strong>Fogo do Dragão:</strong> Cospe fogo intenso para queimar inimigos e
+                                        obstáculos.
+                                    </li>
+                                    <li><strong>Realeza Koopa:</strong> Invoca Koopas para lutar ao seu lado.</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
