--- a/index.html
+++ b/index.html
@@ -292,44 +292,45 @@
                     </div>
                 </div>
             </div>
+            
             <nav class="lista-personagens">
                 <ul>
-                    <li>
+                    <li class="item">
                         <img src="./src/imagens/mario-2.png" alt="Rosto do Mario">
                         <span>Mario</span>
                     </li>
 
-                    <li>
+                    <li class="item">
                         <img src="./src/imagens/luigi-2.png" alt="Rosto do Luigi">
                         <span>Luigi</span>
                     </li>
 
-                    <li>
+                    <li class="item">
                         <img src="./src/imagens/peach-2.png" alt="Rosto do Peach">
                         <span>Peach</span>
                     </li>
 
-                    <li>
+                    <li class="item">
                         <img src="./src/imagens/toad-2.png" alt="Rosto do Toad">
                         <span>Toad</span>
                     </li>
 
-                    <li>
+                    <li class="item">
                         <img src="./src/imagens/donkey-kong-2.png" alt="Rosto do Donkey Kong">
                         <span>Donkey Kong</span>
                     </li>
 
-                    <li>
+                    <li class="item">
                         <img src="./src/imagens/yoshi-2.png" alt="Rosto do Yoshi">
                         <span>Yoshi</span>
                     </li>
 
-                    <li>
+                    <li class="item">
                         <img src="./src/imagens/wario-2.jpg" alt="Rosto do Wario">
                         <span>Wario</span>
                     </li>
 
-                    <li>
+                    <li class="item">
                         <img src="./src/imagens/mario-2.png" alt="Rosto do Mario">
                         <span>Mario</span>
                     </li>
