feat: estilização site responsivo finalizada

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/responsivo.css">
 
 
     <title>Mundo Super Mario</title>
@@ -295,7 +296,7 @@
             
             <nav class="lista-personagens">
                 <ul>
-                    <li class="item">
+                    <li class="item ativo">
                         <img src="./src/imagens/mario-2.png" alt="Rosto do Mario">
                         <span>Mario</span>
                     </li>
