feat: adição de cabeçalho

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+    <header class="cabecalho">
+        <img src="./src/imagens/super-mario-logo.png" alt="Logo do Super Mario">
+    </header>
     <main>
         <div class="mundo-super">
             <div class="baralho">
