feat: rodapé finalizado

--- a/index.html
+++ b/index.html
@@ -342,6 +342,9 @@
             </nav>
         </div>
     </main>
+    <footer class="rodape">
+        <p class="direitos">© 2024 Feito à base de ☕ e 🎶 por Trincode.</p>
+    </footer>
 </body>
 
 </html>
