--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         </div>
     </main>
     <footer class="rodape">
-        <p class="direitos">© 2024 Feito à base de ☕ e 🎶 por Trincode.</p>
+        <p class="direitos">Desenvolvido à ✋🏽 para 🫵🏽 <br>por © 2024 Trincode.</p>
     </footer>
 </body>
 
